llvm-toolchain-12 (1:12.0.1-2) unstable; urgency=medium

  [ Kasper Kantz ]
  * Add riscv64 architecture in control
    enable liblldb, libomp and others which are
    currently unavailable in riscv64 repository.

  [ Krzysztof Aleksander Pyrkosz ]
  * Add libxml2 as a dependency as it is necessary
    for llvm manifest tool (llvm-mt)
    (Closes: #990537)

  [ Jordan Justen ]
  * d/rules: Adjust cmake defines to fix libclc.pc paths

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 12 Jul 2021 08:19:59 +0200

llvm-toolchain-12 (1:12.0.1-1) unstable; urgency=medium

  * New upsream release

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 09 Jul 2021 09:13:12 +0200

llvm-toolchain-12 (1:12.0.1~+rc4-1) unstable; urgency=medium

  * New testing upstream release

 -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 03 Jul 2021 00:17:36 +0200

llvm-toolchain-12 (1:12.0.1~+rc3-1) unstable; urgency=medium

  * New testing upstream release
  * Fix the path to analyze-{cc,c++} for scan-build-py with
    --intercept-first (scan-build-py-fix-analyze-path.diff)

 -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 26 Jun 2021 10:00:56 +0200

llvm-toolchain-12 (1:12.0.1~+rc2-1) unstable; urgency=medium

  * New testing upstream release

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 21 Jun 2021 16:06:36 +0200

llvm-toolchain-12 (1:12.0.1~+rc1-1) unstable; urgency=medium

  [ John Paul Adrian Glaubitz ]
  * Add upstream patch D98574 to fix clang macro definitions on sparc64
  * Add upstream patch D98575 to fix 32-bit compiler-rt build on sparc64

  [ Sylvestre Ledru ]
  * backport D101773 to fix an llvm ir issue on mipsel
    in mips/mips-D101773-reloc.patch
    thanks to Ximin Luo
    (Closes: #988965)

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 28 May 2021 23:27:27 +0200

llvm-toolchain-12 (1:12.0.1~+rc1-1~exp1) unstable; urgency=medium

  * New testing upstream release

 -- Sylvestre Ledru <sylvestre@debian.org>  Wed, 26 May 2021 13:10:29 +0200
