@@ -1,0 +1,2 @@
+usr/lib/llvm-@LLVM_VERSION@/lib/libunwind.so.1.0 /usr/lib/@DEB_HOST_MULTIARCH@/libunwind.so.1.0
+usr/lib/@DEB_HOST_MULTIARCH@/libunwind.so.1.0	/usr/lib/@DEB_HOST_MULTIARCH@/libunwind.so.1
